--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <button id="hello">Hello, World</button>
     <script src="script.js"></script>
   </body>
 </html>
